Changelog
=========


2.1 (unreleased)
----------------

- Nothing changed yet.


2.0 (2011-11-17)
----------------

- Use zope.i18n for translations.
  [eschmutz]

- Added test-buildout for plone 4.1
  [eschmutz]



1.0a7
-----

- Actions menu: fixed available() implementation which was buggy because of the many sources
  [jone]

- Support icon expression on folder_factories actions. Using actionicons is deprecated in plone 4
  [jone]

- Moved test requirements into tests_require, extras_require
  [Thomas Buchberger]



1.0a6
-----

- Do not show contentmenu for anonymous users
  [fsprenger]


1.0
---

- Enabled contentmenu for dossiers and documents
  [jone]