@@ -18,6 +18,11 @@
              factory="ftw.contentmenu.menu.CombinedActionsWorkflowSubMenuItem"
              provides=".interfaces.IContentMenuItem" />
 
+    <adapter for="* *"
+             name="plone.contentmenu.factories"
+             factory="ftw.contentmenu.menu.FtwFactoriesSubMenuItem"
+             provides=".interfaces.IContentMenuItem" />
+
     <browser:menu
         id="plone_contentmenu_actions"
         title="Combined actions- and workflow-menu"
@@ -29,6 +34,7 @@
         title="The 'add' menu - allows the user to add new content items in the context"
         class="ftw.contentmenu.menu.FactoriesMenu"
     />
+
 
   </configure>
 </configure>
