@@ -5,7 +5,11 @@ Changelog
 2.1 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Added a specific plone.contentmenu.factories adapter, which make the menu only
+  available, when some action items realy exists in the menu item.
+  Issue #1371 Anpassungen Aufgaben Workflow
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1371
+  [phgross]
 
 
 2.0 (2011-11-17)
